# DocuMind

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
datasets/: sample.json
examples/: quickstart.py
examples/sample_docs/: hybrid_search.md  pgvector.md  reranking.md
src/documind/: __init__.py  answer.py  chunking.py  cli.py  config.py  embeddings.py  ingest.py  keyword.py  llm.py  models.py  pipeline.py  reranker.py  retrieval.py
src/documind/api/: __init__.py  main.py
src/documind/evaluation/: __init__.py  harness.py
src/documind/stores/: __init__.py  base.py  memory.py  pgvector.py
tests/: conftest.py  test_components.py  test_eval.py  test_pipeline.py
web/: .env.example  Dockerfile  index.html  package-lock.json  package.json  vite.config.js
web/src/: App.jsx  api.js  styles.css
