[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "documind"
version = "0.1.0"
description = "Self-hosted RAG knowledge assistant (hybrid search + re-ranking)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Kashif Lashari" }]
dependencies = [
    "langchain-core>=1.0,<2.0",
    "langchain-text-splitters>=0.3",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pypdf>=4.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
openai = ["langchain-openai>=0.3"]
anthropic = ["langchain-anthropic>=0.3"]
cohere = ["cohere>=5.0", "langchain-cohere>=0.3"]
pgvector = ["psycopg[binary]>=3.1"]
api = ["fastapi>=0.110", "uvicorn[standard]>=0.29"]
dev = [
    "pytest>=8",
    "ruff>=0.5",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]

[project.scripts]
documind = "documind.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
